--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ a:hover{
 
 #top-home {
     height: 100vh;
+    /* background-image: url("./img/brandi-redd-122054-unsplash.jpg") */
 
 }
  header {
