made major changed changed the color to pink and fixed some css stuff

--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@
 }
 
 .parallax{
-    background: url('./img/GA_02_-15.jpg') no-repeat center;
+    background: url('./img/plush-design-studio-740396-unsplash.jpg') no-repeat center;
     background-size: cover;
     background-attachment: fixed;
-    height: 700px;
+    height: 500px;
 }
 
 .about-parallax {
@@ -34,7 +34,8 @@
 header{
     width: 100%;
     height: 70px;
-    background-color: brown;
+    /* background-color: brown; */
+    background-color: #862d59;
     position: fixed;
     left: 0;
     bottom: 0;
@@ -43,6 +44,7 @@ header{
     color: white;
     text-align: center;
     font-family: 'Gochi Hand', cursive;
+    /* font-size: 50px; */
 
 }
 h1 {
@@ -52,6 +54,7 @@ h1 {
   font-family: 'Gochi Hand', cursive;
   font-size: 80px;
   padding-top: 60px;
+  color: #862d59;
 
 }
 
@@ -61,21 +64,26 @@ h2{
     float: left;
     margin-left: 2%;
     margin-top: 10px;
-    font-family: 'Gochi Hand', cursive;
+    /* font-family: 'Gochi Hand', cursive; */
+    font-family: 'Cantata One', serif;
     color: bisque;
 }
 
 h3 {
     text-align: center;
-    font-family: 'Gochi Hand', cursive;
+    /* font-family: 'Gochi Hand', cursive; */
+    font-family: 'Cantata One', serif;
     font-size: 30px;
 }
+
 
 h4 {
     padding-top: 10px;
     text-align: center;
-    font-family: 'Gochi Hand', cursive;
-    font-size: 80px;
+    font-family: 'Cantata One', serif;
+    font-size: 20px;
+    /* color: #862d59; */
+
 }
 
 .btn {
@@ -134,7 +142,8 @@ a:hover{
 }
 
 #top-home {
-    height: 100vh;
+    margin-top: 10px;
+    height: 75vh;
     /* background-image: url("./img/brandi-redd-122054-unsplash.jpg") */
 
 }
@@ -155,6 +164,10 @@ a:hover{
 img {
     height: 300px;
     width: 300px;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 60em;
 }
 
 #Portfolio {
@@ -183,4 +196,14 @@ hr{
 
 #btn {
     display: none;
+}
+
+#Contact {
+    height: 90vh;
+
+}
+
+#GAprofile{
+    height: 200px;
+    width: 200px;
 }
