--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@
     height: 500px;
 }
 
+.parallax-skills {
+    background: url('./img/plush-design-studio-740396-unsplash.jpg') no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 250px;
+}
 .about-parallax {
     background: url('./img/ricardo-unsplash.jpg') no-repeat center;
     background-size: cover;
@@ -97,6 +103,13 @@ h4 {
 
 }
 
+h5{
+    text-align: center;
+    /* font-family: 'Gochi Hand', cursive; */
+    font-family: 'Gochi Hand', cursive;
+    font-size: 30px;
+}
+
 .btn {
     display: none;
     border: 1px solid black;
@@ -145,11 +158,15 @@ a{
     text-decoration: none;
     font-family: 'Gochi Hand', cursive;
     font-size: 1.2vw;
+    
 }
 
 a:hover{
-    color: #f9f9f9;
+    color:grey;
     transition: -16px;
+    animation: 
+    pulse 3s ease infinite alternate,
+    nudge 5s linear infinite alternate;
 }
 
 #top-home {
@@ -158,15 +175,7 @@ a:hover{
     /* background-image: url("./img/brandi-redd-122054-unsplash.jpg") */
 
 }
- header {
-    /* position: -webkit-sticky;
-  position: sticky;
-  top: 0; */
-    /* bottom: 0; */
-    /* background-color: green; */
-    /* border: 2px solid #4CAF50; */
- 
-  } 
+
 .icon{
     display: flex;
     justify-content: space-around;
@@ -201,9 +210,6 @@ flex-direction: column;
 
 }
 
-hr{
-    width: 70%;
-}
 
 #btn {
     display: none;
@@ -224,6 +230,17 @@ hr{
     animation: shake 0.5s; 
       animation-iteration-count: infinite;;
 
+}
+
+.colortop {
+    min-height: 10px;
+    background-color: #862d59;
+}
+
+#Skills {
+    color: #862d59;
+    /* color:#f9f9f9; */
+    height: 300px;
 }
 
 @keyframes shake {
