--- a/style.css
+++ b/style.css
@@ -162,17 +162,17 @@ li {
 
 a{
     text-align: center;
-    color: grey;
+    color: white;
     text-decoration: none;
     font-family: 'Gochi Hand', cursive;
-    font-size: 1.2vw;
+    font-size: 1.8vw;
     
 }
 
 a:hover{
     color:#d9d9d9;
     transition: -16px;
-    font-size: 1.8vw;
+    font-size: 1.9vw;
     /* animation: 
     pulse 3s ease infinite alternate,
     nudge 5s linear infinite alternate; */
@@ -239,12 +239,13 @@ flex-direction: column;
     /* animation: shake 0.5s; 
       animation-iteration-count: infinite;; */
       color: black;
+      font-size: 1.3vw;
 
 }
 
 .logo-text:hover{
     color: black;
-    font-size: 1.5vw;
+    font-size: 1.3vw;
 }
 .colortop {
     min-height: 10px;
