added my new projects on the portfolio

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header{
     bottom: 0;
     width: 100%;
     /* background-color: red; */
-    color: white;
+    /* color: white; */
     text-align: center;
     font-family: 'Gochi Hand', cursive;
     /* font-size: 50px; */
@@ -182,6 +182,8 @@ a:hover{
     /* margin-top: 0px; */
     height: 75vh;
     /* background-image: url("./img/brandi-redd-122054-unsplash.jpg") */
+    /* background: linear-gradient(0deg,  #331335 0%,#dc97e2 50%,#fffeff 100%); */
+
 
 }
 
